<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GeoLocation</string>
    <string name="provider">Provider:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="latestUpdate">Latest Update:</string>
    <string name="not_available">Not available</string>
    <string name="location_updated_message">Location updated</string>
    <string name="activity">Activity:</string>
    <string name="confidence">Confidence:</string>
</resources>
