<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
            android:id="@+id/linearLayout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp">

        <TextView
                android:id="@+id/TextView_Label_Provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dip"
                android:text="@string/provider"
                android:textSize="20sp">
        </TextView>

        <TextView
                android:id="@+id/TextView_Provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available"
                android:textSize="20sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/TextView_Label_Latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dip"
                android:text="@string/latitude"
                android:textSize="20sp">
        </TextView>

        <TextView
                android:id="@+id/TextView_Latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available"
                android:textSize="20sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/TextView_Label_Longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="5sp"
                android:text="@string/longitude"
                android:textSize="20sp">
        </TextView>

        <TextView
                android:id="@+id/TextView_Longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available"
                android:textSize="20sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/TextView_Label_Accuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="5sp"
                android:text="@string/accuracy"
                android:textSize="20sp">
        </TextView>

        <TextView
                android:id="@+id/TextView_Accuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available"
                android:textSize="20sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView_Label_LatestUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="5sp"
            android:text="@string/latestUpdate"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextView_LatestUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>


